<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:my_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="18dp"
        android:layout_marginTop="34dp"
        android:text="@string/complete"
        android:textColor="@color/text_color_67_gray"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp">

        <com.simo.utils.myView.MyDesignCircle
            android:id="@+id/test_circle_third"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_centerInParent="true"
            android:background="@color/white"
            my_view:ballAngle="180"
            my_view:radius="110dp" />

        <ImageView
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:layout_centerInParent="true"
            android:contentDescription="@null"
            android:src="@mipmap/ornament" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/letter_b"
                android:textColor="@color/white"
                android:textSize="36sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/neck_assess"
                android:textColor="@color/text_color_67_gray"
                android:textSize="18sp" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36.5dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_1"
            android:textColor="@color/text_color_ab_gray"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27.5dp"
            android:text="@string/advice_1_1"
            android:textColor="@color/text_color_67_gray"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advice_1_2"
            android:textColor="@color/text_color_67_gray"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/share_to_qq"
        android:layout_width="153.5dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:background="@drawable/bg_btn_in_adjusting"
        android:text="@string/share_to_qq"
        android:textColor="@color/text_color_67_gray"
        android:textSize="18sp" />

</LinearLayout>