<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mine_bg">

    <LinearLayout
        android:layout_width="322dp"
        android:layout_height="460dp"
        android:layout_centerInParent="true"
        android:background="@drawable/border_link"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/app_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30.5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@mipmap/appimg" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_net"
            style="@style/setOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginTop="12dp"
            android:clickable="false"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_electric"
                android:textColor="@color/text_color_blue_2f"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/battery"
                    android:textColor="@color/text_color_blue_2f"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ProgressBar
                android:id="@+id/disconnect_pro"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="287dp"
                android:layout_height="12.5dp"
                android:max="100"
                android:progress="85"
                android:progressDrawable="@drawable/progress_style" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/battery_available"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/run_of_time"
                android:textColor="@color/text_color_blue_2f"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/battery_used"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/run_time"
                android:textColor="@color/text_color_blue_2f"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/use_time"
                android:textColor="@color/text_color_blue_2f"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp">

            <Button
                android:id="@+id/my_test_btn"
                android:layout_width="288dp"
                android:layout_height="52.5dp"
                android:background="@drawable/solid_unclicked"
                android:text="@string/i_want_conn"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp">

            <Button
                android:id="@+id/disconnect_btn"
                android:layout_width="288dp"
                android:layout_height="52.5dp"
                android:background="@drawable/red_solid"
                android:text="@string/break_connect"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>